--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
       <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
       <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 
       <script>
-        var App, Search, Gif
+        var App, Search, Gif, CONFIG;
       </script>
+      <script type="text/babel" src="config.js"></script>
       <script type="text/babel" src="components/Search.js"></script>
       <script type="text/babel" src="components/Gif.js"></script>
       <script type="text/babel" src="components/App.js"></script>
