--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   </head>
   <body>
     <div id="app"></div>
-      <script type="text/babel" src="node_modules/babel-polyfill/dist/polyfill.js"></script>
-
+      
+      <script type="text/babel" src="node_modules/babel-polyfill/dist/polyfill.js"></script> 
       <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
       <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
       <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
+      <!--Czy ten skrypt ponizej trzeba wywalic? -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-
+      
       <script>
         var App, Search, Gif, CONFIG;
       </script>
